Link hint mode can open links in current or new tab

--- a/global.html
+++ b/global.html
@@ -19,6 +19,7 @@ var defaultSettings = {
     activateGoMode : "g",
 //    "gg" : scrollToTop,
     openLink : "f",
+    openLinkInNewTab : "F",
     activateInsertMode : "i",
     handleEscape : "ESC",
     openSettings : "?"
