--- a/settings.html
+++ b/settings.html
@@ -115,6 +115,7 @@ window.addEventListener("load", function () {
   <label>Scroll up</label><input type="text" class="keySetting" id="scrollUp" /><br />
   <label>Scroll down</label><input type="text" class="keySetting" id="scrollDown" /><br />
   <label>Open link in current tab</label><input type="text" class="keySetting" id="openLink" /><br />
+  <label>Open link in new tab</label><input type="text" class="keySetting" id="openLinkInNewTab" /><br />
   <label>Open a new tab</label><input type="text" class="keySetting" id="newTab" /><br />
   <label>Close current tab</label><input type="text" class="keySetting" id="closeTab" /><br />
   <label>Go back in history</label><input type="text" class="keySetting" id="historyBack" /><br />
