Fix 'Reload page' not being accessible in settings, and remove console log statements

--- a/global.html
+++ b/global.html
@@ -9,6 +9,7 @@ var defaultSettings = {
     scrollUp : "k",
     historyBack : "J",
     historyForward : "K",
+    reloadPage : "r",
     prevTab : "H",
     nextTab : "L",
     newTab : "t",
