Add 'Next page' and 'Previous page' link navigation

--- a/global.html
+++ b/global.html
@@ -17,6 +17,8 @@ var defaultSettings = {
     scrollToBottom : "G",
     activateGoMode : "g",
 //    "gg" : scrollToTop,
+    nextPage : "]",
+    prevPage : "[",
     openLink : "f",
     openLinkInNewTab : "F",
     activateInsertMode : "i",
