--- a/settings.html
+++ b/settings.html
@@ -80,7 +80,7 @@ function validateSettings() {
       continue;
     }
 
-    if (!val.match(/[a-z]/i)) {
+    if (!val.match(/[a-z]/i) || val.length > 1) {
       input.classList.add("invalid-setting");
       valid = false;
     }
@@ -174,6 +174,8 @@ window.addEventListener("load", function () {
     <div class="row"><label>Go back in history</label><input type="text" class="keySetting" id="historyBack" /><br /></div>
     <div class="row"><label>Go forward in history</label><input type="text" class="keySetting" id="historyForward" /><br /></div>
     <div class="row"><label>Reload page</label><input type="text" class="keySetting" id="reloadPage" /><br /></div>
+    <div class="row"><label>Follow link labeled 'Next'</label><input type="text" class="keySetting" id="nextPage" /><br /></div>
+    <div class="row"><label>Follow link labeled 'Previous'</label><input type="text" class="keySetting" id="prevPage" /><br /></div>
     <div class="row"><label>Switch to previous tab</label><input type="text" class="keySetting" id="prevTab" /><br /></div>
     <div class="row"><label>Switch to next tab</label><input type="text" class="keySetting" id="nextTab" /><br /></div>
     <div class="row"><label>Activate insert mode</label><input type="text" class="keySetting" id="activateInsertMode" /><br /></div>
